# Shader

./: .dir-locals.el  .gitignore  CMakeLists.txt  korefile.js
Sources/: Shader.cpp  shader.frag.glsl
