cmake_minimum_required(VERSION 3.6)
project(Shader)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -static-libgcc -static-libstdc++")
add_definitions(
  -DKORE_G1
  -DKORE_G2
  -DKORE_G3
  -DKORE_A1
  -DKORE_A2
  -DKORE_LINUX
  -DKORE_OPENGL
  -DKORE_POSIX
  -DKORE_G4
  -DKORE_G5
  -DKORE_G5ONG4
  -DKORE_A3
)
include_directories(
  "/home/rb/repos/Kha/Kore/Sources"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources"
  "/home/rb/repos/Kha/Kore/Backends/Audio3/A3onA2/Sources"
)
set(SOURCE_FILES
  "/home/rb/workspace/Kha/Kore/Shader/Sources/Shader.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Audio3/A3onA2/Sources/Kore/Audio.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Audio3/A3onA2/Sources/Kore/TextToSpeech.winrt.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Audio3/A3onA2/Sources/Kore/pch.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/GL/eglew.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/GL/glew.c"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/GL/glew.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/GL/glxew.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/GL/wglew.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/ComputeImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/ComputeImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/GraphicsImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/IndexBufferImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/IndexBufferImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/OpenGL.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/OpenGL.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/OpenGLWindow.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/OpenGLWindow.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/PipelineStateImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/PipelineStateImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/RenderTargetImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/RenderTargetImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/ShaderImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/ShaderImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/ShaderStorageBufferImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/ShaderStorageBufferImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/TextureArrayImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/TextureArrayImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/TextureImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/TextureImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/VertexBufferImpl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/VertexBufferImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/VrInterface.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/ogl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics4/OpenGL/Sources/Kore/pch.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/CommandList5Impl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/CommandList5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/ConstantBuffer5Impl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/ConstantBuffer5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/G5onG4.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/G5onG4.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/Graphics5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/IndexBuffer5Impl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/IndexBuffer5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/PipelineState5Impl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/PipelineState5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/RenderTarget5Impl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/RenderTarget5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/Shader5Impl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/Shader5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/Texture5Impl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/Texture5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/VertexBuffer5Impl.cpp"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/VertexBuffer5Impl.h"
  "/home/rb/repos/Kha/Kore/Backends/Graphics5/G5onG4/Sources/Kore/pch.h"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Display.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/DisplayData.h"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Display_XRandr.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Display_Xinerama.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Display_old.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Linux.h"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Sound.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/System.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Video.h"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/VideoSoundStream.h"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Window.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/WindowData.h"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/pch.h"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Input/Gamepad.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Input/Gamepad.h"
  "/home/rb/repos/Kha/Kore/Backends/System/Linux/Sources/Kore/Input/Mouse.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/Event.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/EventImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/Mutex.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/MutexImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/Semaphore.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/SemaphoreImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/Thread.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/ThreadLocal.cpp"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/ThreadLocalImpl.h"
  "/home/rb/repos/Kha/Kore/Backends/System/POSIX/Sources/Kore/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/C/Kore/Error.c"
  "/home/rb/repos/Kha/Kore/Sources/C/Kore/Error.h"
  "/home/rb/repos/Kha/Kore/Sources/C/Kore/Log.c"
  "/home/rb/repos/Kha/Kore/Sources/C/Kore/Log.h"
  "/home/rb/repos/Kha/Kore/Sources/C/Kore/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/CodeStyle.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Display.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Error.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Error.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/ErrorArgs.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Log.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Log.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/LogArgs.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/System.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/System.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Window.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio1/Audio.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio1/Audio.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio1/Sound.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio1/Sound.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio1/SoundStream.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio1/SoundStream.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio1/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio1/stb_vorbis.c"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio2/Audio.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio2/Audio.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio2/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio3/Audio.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio3/Audio.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio3/TextToSpeech.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Audio3/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Compute/Compute.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics1/Color.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics1/Color.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics1/Graphics.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics1/Graphics.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics1/Image.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics1/Image.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics1/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics1/stb_image.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics2/Graphics.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics2/Graphics.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics2/Kravur.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics2/Kravur.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics2/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics3/Graphics.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics3/Graphics.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics3/Light.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics3/Texture.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics3/Texture.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics3/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/Graphics.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/Graphics.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/PipelineState.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/PipelineState.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/Shader.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/Texture.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/Texture.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/TextureArray.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/TextureArray.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/VertexStructure.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics4/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/CommandList.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/CommandList.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/ConstantBuffer.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/ConstantBuffer.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/Graphics.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/Graphics.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/PipelineState.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/PipelineState.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/RayTrace.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/Shader.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/Texture.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/Texture.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/VertexStructure.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Graphics5/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/BufferReader.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/BufferReader.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/FileReader.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/FileReader.winrt.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/FileWriter.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/FileWriter.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/Reader.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/Reader.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/Writer.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/Writer.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/lz4.c"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/lz4.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/lz4frame.c"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/lz4frame.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/lz4frame_static.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/lz4hc.c"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/lz4hc.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/lz4opt.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/xxhash.c"
  "/home/rb/repos/Kha/Kore/Sources/Kore/IO/lz4/xxhash.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Gamepad.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Gamepad.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Keyboard.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Keyboard.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Mouse.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Mouse.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Pen.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Pen.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Sensor.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Sensor.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Surface.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/Surface.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Input/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/Core.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/Core.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/Matrix.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/Quaternion.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/Quaternion.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/Random.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/Random.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/Vector.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Math/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Network/Connection.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Network/Connection.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Network/Http.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Network/Http.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Network/Socket.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Network/Socket.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Network/pch.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Simd/float32x4.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Threads/Event.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Threads/Mutex.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Threads/Semaphore.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Threads/Thread.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Threads/ThreadLocal.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/CameraImage.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/CameraImage.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/SensorState.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/SensorState.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/VrInterface.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/VrPose.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/VrPose.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/VrPoseState.cpp"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/VrPoseState.h"
  "/home/rb/repos/Kha/Kore/Sources/Kore/Vr/pch.h"
)
add_executable(Shader ${SOURCE_FILES})
target_link_libraries(Shader
  asound
  dl
  GL
  X11
  Xinerama
)
